--- a/package.json
+++ b/package.json
@@ -8,30 +8,34 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "2.0.0",
-    "@angular/compiler": "2.0.0",
-    "@angular/core": "2.0.0",
-    "@angular/forms": "2.0.0",
-    "@angular/http": "2.0.0",
-    "@angular/platform-browser": "2.0.0",
-    "@angular/platform-browser-dynamic": "2.0.0",
-    "@angular/router": "3.0.0",
+    "@angular/animations": "^4.3.2",
+    "@angular/cdk": "^2.0.0-beta.8",
+    "@angular/common": "4.3.2",
+    "@angular/compiler": "4.3.2",
+    "@angular/core": "4.3.2",
+    "@angular/forms": "4.3.2",
+    "@angular/http": "4.3.2",
+    "@angular/material": "^2.0.0-beta.8",
+    "@angular/platform-browser": "4.3.2",
+    "@angular/platform-browser-dynamic": "4.3.2",
+    "@angular/router": "4.3.2",
     "@types/node": "^7.0.5",
     "angular2-cookie": "^1.2.5",
-    "angular2-materialize": "^5.1.4",
-    "angular2-text-mask": "^2.1.0",
+    "angular2-materialize": "^15.0.4",
+    "angular2-text-mask": "^8.0.2",
     "core-js": "^2.4.1",
-    "jquery": "^2.2.4",
-    "materialize-css": "^0.97.7",
-    "ng2-bootstrap": "^1.1.16",
-    "rxjs": "5.0.0-beta.12",
-    "ts-helpers": "^1.1.1",
-    "zone.js": "^0.6.23"
+    "jquery": "^3.2.1",
+    "materialize-css": "^0.100.1",
+    "ngx-bootstrap": "^1.8.0",
+    "rxjs": "5.4.2",
+    "ts-helpers": "^1.1.2",
+    "zone.js": "^0.8.16"
   },
   "devDependencies": {
-    "angular-cli": "1.0.0-beta.15",
-    "ts-node": "1.2.1",
-    "tslint": "3.13.0",
-    "typescript": "2.0.2"
+    "angular-cli": "1.0.0-beta.25.5",
+    "@angular/compiler-cli": "4.3.2",
+    "ts-node": "3.3.0",
+    "tslint": "5.5.0",
+    "typescript": "2.4.2"
   }
 }
