--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "angular2-cookie": "^1.2.5",
     "angular2-text-mask": "^8.0.2",
     "core-js": "^2.4.1",
+    "file-saver": "^1.3.3",
     "jquery": "^3.2.1",
     "materialize-css": "^0.100.1",
     "ngx-bootstrap": "^1.8.0",
