--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "@angular/platform-browser": "4.3.2",
     "@angular/platform-browser-dynamic": "4.3.2",
     "@angular/router": "4.3.2",
+    "@types/chart.js": "^2.6.3",
     "@types/node": "^7.0.5",
+    "angular2-chartjs": "^0.3.0",
     "angular2-cookie": "^1.2.5",
     "angular2-text-mask": "^8.0.2",
+    "chart.js": "^2.6.0",
     "core-js": "^2.4.1",
     "file-saver": "^1.3.3",
     "jquery": "^3.2.1",
