--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
     "zone.js": "^0.8.16"
   },
   "devDependencies": {
-    "angular-cli": "1.0.0-beta.25.5",
+    "@angular/cli": "^1.5.5",
     "@angular/compiler-cli": "4.3.2",
     "ts-node": "3.3.0",
     "tslint": "5.5.0",
-    "typescript": "2.4.2"
+    "typescript": "2.3.4"
   }
 }
