--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "ngx-bootstrap": "^1.8.0",
     "rxjs": "5.4.2",
     "ts-helpers": "^1.1.2",
-    "zone.js": "^0.8.16"
+    "zone.js": "^0.8.16",
+    "@angular/cli": "^1.5.5"
   },
   "devDependencies": {
-    "@angular/cli": "^1.5.5",
     "@angular/compiler-cli": "4.3.2",
     "ts-node": "3.3.0",
     "tslint": "5.5.0",
