--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "jquery": "^3.2.1",
     "materialize-css": "^0.100.1",
     "ngx-bootstrap": "^1.8.0",
-    "rxjs": "5.4.2",
+    "rxjs": "^5.5.2",
     "ts-helpers": "^1.1.2",
     "zone.js": "^0.8.16",
     "@angular/cli": "^1.5.5"
