--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "file-saver": "^1.3.3",
     "jquery": "^3.2.1",
     "materialize-css": "^0.100.1",
+    "moment": "^2.20.1",
     "ngx-bootstrap": "^1.8.0",
     "rxjs": "^5.5.2",
     "ts-helpers": "^1.1.2",
