--- a/package.json
+++ b/package.json
@@ -4,42 +4,45 @@
   "license": "MIT",
   "angular-cli": {},
   "scripts": {
-    "start": "ng serve --host 0.0.0.0 --environment=test"
+    "start": "ng serve --host 0.0.0.0"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.1",
-    "@angular/cdk": "5.2.1",
-    "@angular/cli": "^1.5.5",
-    "@angular/common": "^5.2.1",
-    "@angular/compiler": "^5.2.1",
-    "@angular/core": "^5.2.1",
-    "@angular/forms": "^5.2.1",
-    "@angular/http": "^5.2.1",
-    "@angular/material": "^5.2.1",
-    "@angular/platform-browser": "^5.2.1",
-    "@angular/platform-browser-dynamic": "^5.2.1",
-    "@angular/router": "^5.2.1",
+    "@angular/animations": "^7.2.10",
+    "@angular/cdk": "7.3.5",
+    "@angular/cli": "^7.3.6",
+    "@angular/common": "^7.2.10",
+    "@angular/compiler": "^7.2.10",
+    "@angular/core": "^7.2.10",
+    "@angular/forms": "^7.2.10",
+    "@angular/http": "^7.2.10",
+    "@angular/material": "^7.3.5",
+    "@angular/platform-browser": "^7.2.10",
+    "@angular/platform-browser-dynamic": "^7.2.10",
+    "@angular/router": "^7.2.10",
     "@types/chart.js": "^2.7.7",
     "@types/node": "^9.4.6",
-    "angular2-chartjs": "^0.3.0",
-    "angular2-cookie": "^1.2.5",
+    "angular2-chartjs": "^0.5.1",
+    "angular2-cookie": "^1.2.6",
     "angular2-text-mask": "^8.0.2",
-    "chart.js": "^2.6.0",
-    "core-js": "^2.4.1",
+    "chart.js": "^2.8.0",
+    "core-js": "^2.6.5",
     "file-saver": "^1.3.3",
-    "jquery": "^3.2.1",
-    "materialize-css": "^0.100.1",
+    "jquery": "^3.3.1",
+    "materialize-css": "^1.0.0",
     "moment": "^2.20.1",
-    "ngx-bootstrap": "^1.8.0",
-    "rxjs": "^5.5.2",
+    "ngx-bootstrap": "^3.2.0",
+    "rxjs": "^6.4.0",
+    "rxjs-compat": "^6.4.0",
     "ts-helpers": "^1.1.2",
+    "tslib": "^1.9.0",
     "zone.js": "^0.8.16"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^5.2.1",
-    "ts-node": "3.3.0",
+    "@angular-devkit/build-angular": "~0.13.6",
+    "@angular/compiler-cli": "^7.2.10",
+    "ts-node": "8.0.3",
     "tslint": "5.5.0",
-    "typescript": "^2.6.2"
+    "typescript": "^3.2.4"
   }
 }
