--- a/package.json
+++ b/package.json
@@ -9,37 +9,34 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^7.2.10",
-    "@angular/cdk": "7.3.6",
-    "@angular/cli": "^7.3.6",
+    "@angular/cdk": "^7.3.7",
+    "@angular/cli": "^7.3.7",
     "@angular/common": "^7.2.10",
     "@angular/compiler": "^7.2.10",
     "@angular/core": "^7.2.10",
     "@angular/forms": "^7.2.10",
     "@angular/http": "^7.2.10",
-    "@angular/material": "^7.3.6",
+    "@angular/material": "^7.3.7",
     "@angular/platform-browser": "^7.2.10",
     "@angular/platform-browser-dynamic": "^7.2.10",
     "@angular/router": "^7.2.10",
     "@types/chart.js": "^2.7.7",
-    "@types/node": "^9.4.6",
+    "@types/node": "^11.13.4",
     "angular2-chartjs": "^0.5.1",
     "angular2-cookie": "^1.2.6",
-    "angular2-text-mask": "^8.0.2",
     "chart.js": "^2.8.0",
     "core-js": "^2.6.5",
-    "file-saver": "^1.3.3",
+    "file-saver": "^2.0.1",
     "jquery": "^3.3.1",
     "materialize-css": "^1.0.0",
-    "moment": "^2.20.1",
+    "moment": "^2.24.0",
     "ngx-bootstrap": "^3.2.0",
     "rxjs": "^6.4.0",
     "rxjs-compat": "^6.4.0",
-    "ts-helpers": "^1.1.2",
-    "tslib": "^1.9.0",
     "zone.js": "^0.8.16"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.6",
+    "@angular-devkit/build-angular": "~0.13.8",
     "@angular/compiler-cli": "^7.2.10",
     "ts-node": "8.0.3",
     "tslint": "5.5.0",
