--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "angular-cli": {},
   "scripts": {
-    "start": "ng serve --host 0.0.0.0 --environment=test"
+    "start": "ng serve --host 0.0.0.0"
   },
   "private": true,
   "dependencies": {
