--- a/package.json
+++ b/package.json
@@ -8,38 +8,40 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.1",
-    "@angular/cdk": "5.2.1",
-    "@angular/cli": "^1.5.5",
-    "@angular/common": "^5.2.1",
-    "@angular/compiler": "^5.2.1",
-    "@angular/core": "^5.2.1",
-    "@angular/forms": "^5.2.1",
-    "@angular/http": "^5.2.1",
-    "@angular/material": "^5.2.1",
-    "@angular/platform-browser": "^5.2.1",
-    "@angular/platform-browser-dynamic": "^5.2.1",
-    "@angular/router": "^5.2.1",
+    "@angular/animations": "^8.0.0",
+    "@angular/cdk": "^7.3.7",
+    "@angular/cli": "^7.3.7",
+    "@angular/common": "^8.0.0",
+    "@angular/compiler": "^8.0.0",
+    "@angular/core": "^8.0.0",
+    "@angular/forms": "^8.0.0",
+    "@angular/http": "^7.2.15",
+    "@angular/material": "^7.3.7",
+    "@angular/platform-browser": "^8.0.0",
+    "@angular/platform-browser-dynamic": "^8.0.0",
+    "@angular/router": "^8.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.0",
     "@types/chart.js": "^2.7.7",
-    "@types/node": "^9.4.6",
-    "angular2-chartjs": "^0.3.0",
-    "angular2-cookie": "^1.2.5",
-    "angular2-text-mask": "^8.0.2",
-    "chart.js": "^2.6.0",
-    "core-js": "^2.4.1",
-    "file-saver": "^1.3.3",
-    "jquery": "^3.2.1",
-    "materialize-css": "^0.100.1",
-    "moment": "^2.20.1",
-    "ngx-bootstrap": "^1.8.0",
-    "rxjs": "^5.5.2",
-    "ts-helpers": "^1.1.2",
+    "@types/node": "^11.13.4",
+    "angular2-chartjs": "^0.5.1",
+    "angular2-cookie": "^1.2.6",
+    "bootstrap": "^4.3.1",
+    "chart.js": "^2.8.0",
+    "core-js": "^2.6.5",
+    "file-saver": "^2.0.1",
+    "jquery": "^3.3.1",
+    "materialize-css": "^1.0.0",
+    "moment": "^2.24.0",
+    "ngx-bootstrap": "^3.2.0",
+    "rxjs": "^6.4.0",
+    "rxjs-compat": "^6.4.0",
     "zone.js": "^0.8.16"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^5.2.1",
-    "ts-node": "3.3.0",
+    "@angular-devkit/build-angular": "~0.13.8",
+    "@angular/compiler-cli": "^8.0.0",
+    "ts-node": "8.0.3",
     "tslint": "5.5.0",
-    "typescript": "^2.6.2"
+    "typescript": "^3.4.0"
   }
 }
