--- a/package.json
+++ b/package.json
@@ -39,6 +39,6 @@
     "@angular/compiler-cli": "^8.2.3",
     "ts-node": "8.0.3",
     "tslint": "5.5.0",
-    "typescript": "^3.4.0"
+    "typescript": "3.5.2"
   }
 }
