--- a/package.json
+++ b/package.json
@@ -8,35 +8,36 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.3",
-    "@angular/cdk": "^8.1.3",
-    "@angular/cli": "^8.1.3",
-    "@angular/common": "^8.2.3",
-    "@angular/compiler": "^8.2.3",
-    "@angular/core": "^8.2.3",
-    "@angular/forms": "^8.2.3",
-    "@angular/material": "^8.1.3",
-    "@angular/platform-browser": "^8.2.3",
-    "@angular/platform-browser-dynamic": "^8.2.3",
-    "@angular/router": "^8.2.3",
-    "@types/chart.js": "^2.9.18",
-    "@types/node": "^13.11.0",
+    "@angular/animations": "^9.1.7",
+    "@angular/cdk": "^9.2.4",
+    "@angular/cli": "^9.1.7",
+    "@angular/common": "^9.1.7",
+    "@angular/compiler": "^9.1.7",
+    "@angular/core": "^9.1.7",
+    "@angular/forms": "^9.1.7",
+    "@angular/material": "^9.2.4",
+    "@angular/platform-browser": "^9.1.7",
+    "@angular/platform-browser-dynamic": "^9.1.7",
+    "@angular/router": "^9.1.7",
+    "@types/chart.js": "^2.9.21",
+    "@types/node": "^13.13.10",
     "angular2-chartjs": "^0.5.1",
     "chart.js": "^2.9.3",
-    "core-js": "^3.2.1",
+    "core-js": "^3.6.5",
     "file-saver": "^2.0.2",
-    "jquery": "^3.4.1",
+    "jquery": "^3.5.1",
     "materialize-css": "^1.0.0",
     "moment": "^2.24.0",
     "rxjs": "^6.5.5",
     "rxjs-compat": "^6.5.5",
-    "zone.js": "^0.10.3"
+    "zone.js": "^0.10.3",
+    "kind-of": ">=6.0.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.0",
-    "@angular/compiler-cli": "^8.2.3",
+    "@angular-devkit/build-angular": "~0.901.7",
+    "@angular/compiler-cli": "^9.1.7",
     "ts-node": "8.8.1",
     "tslint": "6.1.1",
-    "typescript": "3.5.2"
+    "typescript": "3.6.5"
   }
 }
