--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@angular-devkit/build-angular": "~0.901.7",
     "@angular/compiler-cli": "^9.1.7",
     "ts-node": "8.8.1",
-    "tslint": "6.1.1",
+    "eslint": "7.6.0",
     "typescript": "3.6.5"
   }
 }
