--- a/angular.json
+++ b/angular.json
@@ -20,12 +20,12 @@
             ],
             "styles": [
               "src/styles.css",
-              "node_modules/materialize-css/dist/css/materialize.css",
+              "node_modules/@materializecss/materialize/dist/css/materialize.css",
               "src/css/main.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.js",
-              "node_modules/materialize-css/dist/js/materialize.js"
+              "node_modules/@materializecss/materialize/dist/js/materialize.js"
             ]
           },
           "configurations": {
