--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.1.7",
-    "@angular/cdk": "^9.2.4",
-    "@angular/cli": "^9.1.7",
-    "@angular/common": "^9.1.7",
-    "@angular/compiler": "^9.1.7",
-    "@angular/core": "^9.1.7",
-    "@angular/forms": "^9.1.7",
-    "@angular/material": "^9.2.4",
-    "@angular/platform-browser": "^9.1.7",
-    "@angular/platform-browser-dynamic": "^9.1.7",
-    "@angular/router": "^9.1.7",
+    "@angular/animations": "^12.0.2",
+    "@angular/cdk": "^12.0.2",
+    "@angular/cli": "^12.0.2",
+    "@angular/common": "^12.0.2",
+    "@angular/compiler": "^12.0.2",
+    "@angular/core": "^12.0.2",
+    "@angular/forms": "^12.0.2",
+    "@angular/material": "^12.0.2",
+    "@angular/platform-browser": "^12.0.2",
+    "@angular/platform-browser-dynamic": "^12.0.2",
+    "@angular/router": "^12.0.2",
     "@types/chart.js": "^2.9.21",
     "@types/node": "^13.13.10",
     "angular2-chartjs": "^0.5.1",
@@ -26,18 +26,18 @@
     "core-js": "^3.6.5",
     "file-saver": "^2.0.2",
     "jquery": "^3.5.1",
-    "materialize-css": "^1.0.0",
+    "@materializecss/materialize": "1.1.0-alpha",
     "moment": "^2.24.0",
     "rxjs": "^6.5.5",
     "rxjs-compat": "^6.5.5",
-    "zone.js": "^0.10.3",
+    "zone.js": "^0.11.4",
     "kind-of": ">=6.0.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.7",
-    "@angular/compiler-cli": "^9.1.7",
+    "@angular-devkit/build-angular": "^12.0.2",
+    "@angular/compiler-cli": "^12.0.2",
     "ts-node": "8.8.1",
     "eslint": "7.6.0",
-    "typescript": "3.6.5"
+    "typescript": "4.2.3"
   }
 }
